--- a/practice1/TemplateData/style.css
+++ b/practice1/TemplateData/style.css
@@ -14,3 +14,17 @@ body { padding: 0; margin: 0 }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
+
+.webgl{
+    width:100%;
+    padding-bottom: 56.25%;
+    height:0px;
+    position: relative;
+}
+.webgl iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
